<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android"
        android:background="#ff1d93ff">

    <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/back"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:id="@+id/btn_back"
            />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_failure"
            android:id="@+id/textView"
            android:textSize="32sp"
            android:textColor="#FFF"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="70dp"
            android:layout_alignParentTop="true"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/failure_desc"
            android:id="@+id/textView2"
            android:textColor="#FFF"
            android:layout_below="@+id/textView"
            android:layout_alignStart="@+id/textView"
            android:layout_marginTop="30dp"
            android:layout_marginRight="60dp"/>
    <Button
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:id="@+id/btn_select_failure"
            android:background="@drawable/ic_plus_btn"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/textView2"
            android:layout_marginTop="50dp"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:id="@+id/btn_next"
            android:background="@android:color/transparent"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="30dp"
            android:layout_marginRight="30dp"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset"
            android:id="@+id/btn_reset"
            android:background="@android:color/transparent"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="30dp"
            android:layout_marginBottom="30dp"/>
</RelativeLayout>